--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>ECU Web</title>
+    <title>Fluxkompensator</title>
   </head>
   <body>
       <div id="app"></div>
